# SwarmHub

./: .gitignore  LICENSE  README.md  build_market_swarm.py  pyproject.toml
blobs/: AIAgent.py  BaseGroupChatAgent.py  CATEGORY.py  CascadingAgent.py  Dr. Alex Chen.py  Expert answer.py  FACT_CHECKING.py  Finalize podcast.py  GRAMMAR_AND_BIAS_REVIEW.py  GittyAgent.py  GreeterAgent.py  GroupChatManager.py  Host question.py  Keywords.py  MockAgentRegistry.py  MyAgent.py  ObserverAgent.py  PlayerAgent.py  Prof. Sarah Martinez.py  QUOTE_EXTRACTION.py  ReceiveAgent.py  SUMMARY.py  Save podcast.py  SchedulingAssistantAgent.py  SemanticRouterAgent.py  SimpleAssistantAgent.py  SlowUserProxyAgent.py  Start research.py  Structure.py  TONE_ANALYSIS.py  UIAgent.py  UserAgent.py  UserProxy.py  UserProxyAgent.py  Web research.py  Wiki research.py  WorkerAgent.py  Write conclusion.py  Write report.py  Write script.py  (+219 more)
blobs/advanced-corrective-rag/: blob.json
blobs/advanced_rag/: rag_retriever.py
examples/: advanced_rag_swarm.txt
swarmhub/: __main__.py  cli.py
swarmhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swarmhub/core/: builder.py  linker.py  registry.py  spec.py
swarmhub/emitters/: autogen.py  crewai.py  langgraph.py  pydanticai.py
swarmhub/parsers/: autogen.py  crewai.py  langgraph.py  pydanticai.py
test_workspace/: main.py  swarmhub_crewai.py
tests/: test_compiler_ring.py
tools/advanced_rag/: vector_service_daemon.py
tools/ingestion/: classifier.py  crawler.py  git_hook.py  mass_compiler.py  official_cookbooks.py  (+1 more)
(+10 files in other folders)
